--- a/app/src/main/res/layout/fragment_bmi.xml
+++ b/app/src/main/res/layout/fragment_bmi.xml
@@ -10,7 +10,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
 <TextView
-        android:text="@+string/weight"
+        android:text="@string/weight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"/>
@@ -21,6 +21,11 @@
          android:inputType="number"
          android:ems="20"
         />
+    <TextView
+        android:text="@string/KG"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"/>
   </LinearLayout>
   
 
@@ -29,7 +34,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
     <TextView
-         android:text="@+string/height"
+         android:text="@string/height"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"/>
@@ -40,14 +45,22 @@
          android:inputType="number"
         android:ems="20"
     />
+
+        <TextView
+            android:text="@string/cm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"/>
+
 </LinearLayout>
 
-<LinearLayout 
+<!--
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal" >
 <TextView
-         android:text="@+string/age"
+         android:text="@string/age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"/>
@@ -68,16 +81,44 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:text="@+string/gender"/>
-<EditText 
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/gender"
-    android:inputType="number"
-    android:ems="20"
-    />
+        android:text="@string/gender"/>
+
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/gender">
+
+        <RadioButton
+            android:id="@+id/radiomale"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Male"/>
+        <RadioButton
+            android:id="@+id/radiofemale"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Female"/>
+    </RadioGroup>
+
+
+
 </LinearLayout>
+-->
+    <Button
+        android:id="@+id/result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calculate"/>
 
 
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/results"/>
+    <EditText
+        android:id="@+id/results"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
